--- a/app/views/emails/flu/vaccine-given.html
+++ b/app/views/emails/flu/vaccine-given.html
@@ -7,7 +7,7 @@
   <p>Dear {{ name }},</p>
 
   <p>
-    {{ childName }} had their flu vaccination at {{ sessionSchool }} today.
+    {{ childName }}{{ knownAs }} had their flu vaccination at {{ sessionSchool }} today.
     {% if primary %}They were very brave.{% endif %}
   </p>
 
