--- a/app/views/emails/hpv/vaccine-given.html
+++ b/app/views/emails/hpv/vaccine-given.html
@@ -6,7 +6,7 @@
 {% block email %}
   <p>Dear {{ name }},</p>
 
-  <p>{{ childName }} got their HPV vaccination at {{ sessionSchool }} today.</p>
+  <p>{{ childName }}{{ knownAs }} got their HPV vaccination at {{ sessionSchool }} today.</p>
 
   <p>We suggest you record the following details in their red book (also known as their personal child health record):</p>
 
