--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,26 +15,26 @@
 
           <h2 class="nhsuk-heading-m">Emails</h2>
           <ul class="nhsuk-list">
-            <li><a href="/emails/flu-consent">Request consent for flu vaccination</a></li>
-            <li><a href="/emails/flu-reminder">Reminder about consent for flu vaccination</a></li>
-            <li><a href="/emails/flu-consent-confirmation">Confirmation of agreement for flu vaccination</a></li>
-            <li><a href="/emails/flu-consent-needs-triage">Confirmation of agreement for flu vaccination (needs triage)</a></li>
-            <li><a href="/emails/flu-consent-triage-complete">Confirmation of agreement for flu vaccination (triage complete)</a></li>
-            <li><a href="/emails/flu-consent-injection">Confirmation of agreement for flu vaccination using injection</a></li>
-            <li><a href="/emails/flu-refusal-confirmation">Confirmation of refusal for flu vaccination</a></li>
-            <li><a href="/emails/flu-vaccine-reminder">Reminder of upcoming flu vaccination</a></li>
-            <li><a href="/emails/flu-vaccine-given">Flu vaccine given</a></li>
+            <li><a href="/emails/flu/consent">Request consent for flu vaccination</a></li>
+            <li><a href="/emails/flu/reminder">Reminder about consent for flu vaccination</a></li>
+            <li><a href="/emails/flu/consent-confirmation">Confirmation of agreement for flu vaccination</a></li>
+            <li><a href="/emails/flu/consent-needs-triage">Confirmation of agreement for flu vaccination (needs triage)</a></li>
+            <li><a href="/emails/flu/consent-triage-complete">Confirmation of agreement for flu vaccination (triage complete)</a></li>
+            <li><a href="/emails/flu/consent-injection">Confirmation of agreement for flu vaccination using injection</a></li>
+            <li><a href="/emails/flu/refusal-confirmation">Confirmation of refusal for flu vaccination</a></li>
+            <li><a href="/emails/flu/vaccine-reminder">Reminder of upcoming flu vaccination</a></li>
+            <li><a href="/emails/flu/vaccine-given">Flu vaccine given</a></li>
           </ul>
           <ul class="nhsuk-list">
-            <li><a href="/emails/hpv-consent">Request consent for HPV vaccination</a></li>
-            <li><a href="/emails/hpv-reminder">Reminder about consent for HPV vaccination</a></li>
-            <li><a href="/emails/hpv-student">Information for students about HPV vaccination</a></li>
-            <li><a href="/emails/hpv-consent-confirmation">Confirmation of agreement for HPV vaccination</a></li>
-            <li><a href="/emails/hpv-consent-needs-triage">Confirmation of agreement for HPV vaccination (needs triage)</a></li>
-            <li><a href="/emails/hpv-consent-triage-complete">Confirmation of agreement for HPV vaccination (triage complete)</a></li>
-            <li><a href="/emails/hpv-refusal-confirmation">Confirmation of refusal for HPV vaccination</a></li>
-            <li><a href="/emails/hpv-vaccine-given">HPV vaccine given</a></li>
-            <li><a href="/emails/hpv-vaccine-not-given">HPV vaccine not given</a></li>
+            <li><a href="/emails/hpv/consent">Request consent for HPV vaccination</a></li>
+            <li><a href="/emails/hpv/reminder">Reminder about consent for HPV vaccination</a></li>
+            <li><a href="/emails/hpv/student">Information for students about HPV vaccination</a></li>
+            <li><a href="/emails/hpv/consent-confirmation">Confirmation of agreement for HPV vaccination</a></li>
+            <li><a href="/emails/hpv/consent-needs-triage">Confirmation of agreement for HPV vaccination (needs triage)</a></li>
+            <li><a href="/emails/hpv/consent-triage-complete">Confirmation of agreement for HPV vaccination (triage complete)</a></li>
+            <li><a href="/emails/hpv/refusal-confirmation">Confirmation of refusal for HPV vaccination</a></li>
+            <li><a href="/emails/hpv/vaccine-given">HPV vaccine given</a></li>
+            <li><a href="/emails/hpv/vaccine-not-given">HPV vaccine not given</a></li>
           </ul>
 
           <h2 class="nhsuk-heading-m">Paper consent</h2>
