--- a/app/views/emails/flu/consent-confirmation.html
+++ b/app/views/emails/flu/consent-confirmation.html
@@ -6,7 +6,7 @@
 {% block email %}
   <p>Dear {{ name }},</p>
 
-  <p>You’ve agreed for {{ childName }} to have their flu vaccination at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}.</p>
+  <p>You’ve agreed for {{ childName }}{{ knownAs }} to have their flu vaccination at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}.</p>
 
   <p>Please tell {{ childName.split(" ") | first }} that they’ll be vaccinated on this date.</p>
 
