--- a/app/views/emails/flu/consent-injection.html
+++ b/app/views/emails/flu/consent-injection.html
@@ -6,7 +6,7 @@
 {% block email %}
   <p>Dear {{ name }},</p>
 
-  <p>You’ve told us you do not want {{ childName }} to have their flu vaccination at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }} because of the gelatine in the nasal spray.</p>
+  <p>You’ve told us you do not want {{ childName }}{{ knownAs }} to have their flu vaccination at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }} because of the gelatine in the nasal spray.</p>
 
   <p>A nurse will be in touch to talk about the possibility of them having an injection instead.</p>
 
