--- a/app/views/emails/hpv/refusal-confirmation.html
+++ b/app/views/emails/hpv/refusal-confirmation.html
@@ -6,7 +6,7 @@
 {% block email %}
   <p>Dear {{ name }},</p>
 
-  <p>You’ve told us you do not want {{ childName }} to have their HPV vaccination at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}.</p>
+  <p>You’ve told us you do not want {{ childName }}{{ knownAs }} to have their HPV vaccination at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}.</p>
 
   <p>If you change your mind, please get in touch with us. You can email example@nhs.uk or call 01234 321456.</p>
 
