--- a/app/views/emails/hpv/vaccine-not-given.html
+++ b/app/views/emails/hpv/vaccine-not-given.html
@@ -7,7 +7,7 @@
 {% block email %}
   <p>Dear {{ name }},</p>
 
-  <p>{{ childName }} did not get their HPV vaccination at {{ sessionSchool }} today. This was because {{ refusalReason}}.</p>
+  <p>{{ childName }}{{ knownAs }} did not get their HPV vaccination at {{ sessionSchool }} today. This was because {{ refusalReason}}.</p>
 
   {% include "emails/_contact.html" %}
 {% endblock %}
