Use default typographic spacing on start pages

--- a/app/views/hpv/start.html
+++ b/app/views/hpv/start.html
@@ -10,14 +10,14 @@
 
           <p>The HPV vaccine helps to prevent HPV related cancers from developing in boys and girls.</p>
 
-          <p class="nhsuk-u-margin-bottom-6">The number of doses you need depends on your age and how well your immune system works. Young people usually only need 1 dose.</p>
+          <p>The number of doses you need depends on your age and how well your immune system works. Young people usually only need 1 dose.</p>
 
           {{ button({
             text: "Start now",
             href: paths.next
           }) }}
 
-          <h2 class="nhsuk-heading-m nhsuk-u-margin-top-4">Use this service in another language</h2>
+          <h2 class="nhsuk-heading-m">Use this service in another language</h2>
 
           <p>
             <a href="#">Change language (English)</a>
