--- a/app/views/dpt/start.html
+++ b/app/views/dpt/start.html
@@ -12,14 +12,14 @@
 
           <p>The MenACWY vaccine, which helps to prevent meningitis and septicaemia, is normally given at the same time as the 3-in-1.</p>
 
-          <p class="nhsuk-u-margin-bottom-6">Both vaccines are offered to all young people aged 13 to 15 (in school Years 9 and 10). They’re given as injections into the upper arm.</p>
+          <p>Both vaccines are offered to all young people aged 13 to 15 (in school Years 9 and 10). They’re given as injections into the upper arm.</p>
 
           {{ button({
             text: "Start now",
             href: paths.next
           }) }}
 
-          <h2 class="nhsuk-heading-m nhsuk-u-margin-top-4">Use this service in another language</h2>
+          <h2 class="nhsuk-heading-m">Use this service in another language</h2>
 
           <p>
             <a href="#">Change language (English)</a>
