--- a/app/views/flu/start.html
+++ b/app/views/flu/start.html
@@ -8,14 +8,14 @@
         <div class="nhsuk-grid-column-two-thirds">
           <h1 class="nhsuk-heading-xl">{{ title }}</h1>
 
-          <p class="nhsuk-u-margin-bottom-6">The vaccination helps to protect children against flu. It also protects others who are vulnerable to flu, such as babies and older people.</p>
+          <p>The vaccination helps to protect children against flu. It also protects others who are vulnerable to flu, such as babies and older people.</p>
 
           {{ button({
             text: "Start now",
             href: paths.next
           }) }}
 
-          <h2 class="nhsuk-heading-m nhsuk-u-margin-top-4">Use this service in another language</h2>
+          <h2 class="nhsuk-heading-m">Use this service in another language</h2>
 
           <p>
             <a href="#">Change language (English)</a>
