--- a/app/views/index.html
+++ b/app/views/index.html
@@ -59,7 +59,7 @@
 
           <h2 class="nhsuk-heading-m">Other prototypes</h2>
 
-          <p><a href="https://poc-prototype.herokuapp.com/">Record children’s vaccinations prototype</a></p>
+          <p><a href="https://poc-prototype.herokuapp.com/">Manage vaccinations in schools prototype</a></p>
 
           <h2 class="nhsuk-heading-m">Design history</h2>
           <p>
