Update HPV health questions and align other campaigns

--- a/app/views/consent/_summary-list-flu.html
+++ b/app/views/consent/_summary-list-flu.html
@@ -42,7 +42,7 @@
       href: basePath + "consent/health-medication-allergies?change=true"
     },
     {
-      key: "Has your child ever had a reaction to previous vaccinations?",
+      key: "Has your child ever had a severe reaction to any medicines, including vaccines?",
       value: { html: healthAnswer("health.previous-reaction") },
       href: basePath + "consent/health-previous-reaction?change=true"
     },
