--- a/app/views/consent/_summary-list-hpv.html
+++ b/app/views/consent/_summary-list-hpv.html
@@ -2,24 +2,19 @@
   classes: "app-summary-list--full-width",
   rows: decorateRows([
     {
-      key: "Does your child have any severe allergies that have led to an anaphylactic reaction?",
+      key: "Does your child have any severe allergies?",
       value: { html: healthAnswer("health.allergy") },
       href: basePath + "consent/health-allergy?change=true"
     },
     {
-      key: "Does your child have any existing medical conditions?",
-      value: { html: healthAnswer("health.existing-conditions") },
-      href: basePath + "consent/health-existing-conditions?change=true"
+      key: "Does your child have any medical conditions for which they receive treatment?",
+      value: { html: healthAnswer("health.medical-conditions") },
+      href: basePath + "consent/health-medical-conditions?change=true"
     },
     {
-      key: "Does your child take any regular medication?",
-      value: { html: healthAnswer("health.regular-medication") },
-      href: basePath + "consent/health-regular-medication?change=true"
-    },
-    {
-      key: "Is there anything else you think we should know?",
-      value: { html: healthAnswer("health.anything-else") },
-      href: basePath + "consent/health-anything-else?change=true"
+      key: "Has your child ever had a severe reaction to any medicines, including vaccines?",
+      value: { html: healthAnswer("health.previous-reaction") },
+      href: basePath + "consent/health-previous-reaction?change=true"
     }
   ])
 }) }}
