--- a/app/views/consent/health-allergy.html
+++ b/app/views/consent/health-allergy.html
@@ -1,5 +1,5 @@
 {% extends "layouts/wizard.html" %}
-{% set title = "Does your child have any severe allergies that have led to an anaphylactic reaction?" %}
+{% set title = "Does your child have any severe allergies?" %}
 
 {% block form %}
   {% set html %}
