--- a/app/views/consent/health-previous-reaction.html
+++ b/app/views/consent/health-previous-reaction.html
@@ -1,5 +1,5 @@
 {% extends "layouts/wizard.html" %}
-{% set title = "Has your child ever had a reaction to previous vaccinations?" %}
+{% set title = "Has your child ever had a severe reaction to any medicines, including vaccines?" %}
 
 {% block form %}
   {% set html %}
