--- a/app/views/consent/_summary-list-dpt.html
+++ b/app/views/consent/_summary-list-dpt.html
@@ -7,9 +7,9 @@
       href: basePath + "consent/health-allergy?change=true"
     },
     {
-      key: "Does your child have any existing medical conditions?",
-      value: { html: healthAnswer("health.existing-conditions") },
-      href: basePath + "consent/health-existing-conditions?change=true"
+      key: "Does your child have any medical conditions for which they receive treatment?",
+      value: { html: healthAnswer("health.medical-conditions") },
+      href: basePath + "consent/health-medical-conditions?change=true"
     },
     {
       key: "Does your child take any immunosuppressant medication?",
