--- a/app/views/consent/confirmation-no-consent.html
+++ b/app/views/consent/confirmation-no-consent.html
@@ -18,8 +18,8 @@
 
   <p>We’ve sent a confirmation to jane.doe@example.com.</p>
 
-  {% if vaccine == "HPV" %}
+  {# if vaccine == "HPV" %}
     <p>If your child requests the HPV vaccine on the day of the session, a nurse will assess them for something called Gillick competence.</p>
     <p>If the nurse decides they’re sufficiently mature to understand the implications of getting the vaccine, they can still receive it.</p>
-  {% endif %}
+  {% endif #}
 {% endblock %}
