--- a/app/views/emails/flu/vaccine-reminder.html
+++ b/app/views/emails/flu/vaccine-reminder.html
@@ -1,7 +1,6 @@
 {% extends "layouts/email.html" %}
 {% set subject = childName + " will get their flu vaccination on " + (sessionDate | date("cccc d MMMM")) %}
 {% set name = parent.name or "Jane Doe" %}
-{% set from = "School vaccinations <school.vaccinations@nhs.net>" %}
 
 {% block email %}
   <p>Dear {{ name }},</p>
@@ -10,7 +9,7 @@
 
   <p>If you haven’t already told {{ childName.split(" ") | first }} that they’ll be vaccinated on this date, please let them know what to expect.</p>
 
-  <p>If {{ childName.split(" ") | first }}’s health changes, or you arrange to have the vaccination elsewhere, please get in touch. You can email example@nhs.uk or call 01234 321456.</p>
+  <p>If {{ childName.split(" ") | first }}’s health changes, or you arrange to have the vaccination elsewhere, please get in touch. You can email {{ data.supportEmail | urlize | safe }} or call 01234 321456.</p>
 
   <h2 class="nhsuk-heading-m">Possible side effects</h2>
 
