--- a/app/views/layouts/email.html
+++ b/app/views/layouts/email.html
@@ -17,7 +17,7 @@
       </div>
       <div>
         <dt>From:</dt>
-        <dd>{{ from or "GOV.UK <service@gov.uk>" }}<dd>
+        <dd>School vaccinations &lt;{{ data.supportEmail }}&gt;<dd>
       </div>
       <div>
         <dt>To:</dt>
