--- a/app/views/school/campaign/flu-reminder-preview.html
+++ b/app/views/school/campaign/flu-reminder-preview.html
@@ -47,7 +47,7 @@
 
         <p>You can book a flu vaccine at a catch-up clinic run by the local health team.</p>
 
-        <p>Speak to them by calling 01234 321456, or email example@nhs.uk.</p>
+        <p>Speak to them by calling 01234 321456, or email {{ data.supportEmail | urlize | safe }}.</p>
 
         <h2 class="nhsuk-heading-m">About the flu vaccine</h2>
 
