--- a/app/views/consent/no-parental-responsibility.html
+++ b/app/views/consent/no-parental-responsibility.html
@@ -8,7 +8,7 @@
 
       <p>To give or refuse consent for a child’s vaccination, you need to have parental responsibility.</p>
 
-      <p>If you have any questions, please contact the local health team by calling 01234 321456, or email <a href="mailto:example@nhs.uk">example@nhs.uk</a>.</p>
+      <p>If you have any questions, please contact the local health team by calling 01234 321456, or email {{ data.supportEmail | urlize | safe }}.</p>
     </div>
   </div>
 {% endblock %}
