--- a/app/views/consent/school-not-in-pilot.html
+++ b/app/views/consent/school-not-in-pilot.html
@@ -8,7 +8,7 @@
 
       <p>This service is being piloted with a small number of schools. It’s only for parents whose children attend participating schools.</p>
 
-      <p>If you have any questions, please contact the local health team by calling 01234 321456, or email <a href="mailto:example@nhs.uk">example@nhs.uk</a>.</p>
+      <p>If you have any questions, please contact the local health team by calling 01234 321456, or email {{ data.supportEmail | urlize | safe }}.</p>
     </div>
   </div>
 {% endblock %}
