--- a/app/views/emails/_contact.html
+++ b/app/views/emails/_contact.html
@@ -2,4 +2,4 @@
   <h2 class="nhsuk-heading-m">Contact the local health team</h2>
 {% endif %}
 
-<p>Speak to a member of the local health team by calling 01234 321456, or email example@nhs.uk.</p>
+<p>Speak to a member of the local health team by calling 01234 321456, or email {{ data.supportEmail | urlize | safe }}.</p>
