--- a/app/views/emails/flu/refusal-confirmation.html
+++ b/app/views/emails/flu/refusal-confirmation.html
@@ -1,14 +1,13 @@
 {% extends "layouts/email.html" %}
 {% set subject = "Flu vaccination on " + (sessionDate | date("d MMMM")) %}
 {% set name = parent.name or "Jane Doe" %}
-{% set from = "School vaccinations <school.vaccinations@nhs.net>" %}
 
 {% block email %}
   <p>Dear {{ name }},</p>
 
   <p>You’ve told us you do not want {{ childName }}{{ knownAs }} to have their flu vaccination at {{ sessionSchool }} on {{ sessionDate | date("cccc d MMMM") }}. Please let {{ childName.split(" ") | first }} know they will not be vaccinated against flu in school.</p>
 
-  <p>If you change your mind, please get in touch with us. You can email example@nhs.uk or call 01234 321456.</p>
+  <p>If you change your mind, please get in touch with us. You can email {{ data.supportEmail | urlize | safe }} or call 01234 321456.</p>
 
   <p>The child health team</p>
 {% endblock %}
