--- a/app/views/hpv/after-deadline.html
+++ b/app/views/hpv/after-deadline.html
@@ -9,7 +9,7 @@
 
       <p>The deadline for responding has passed. This means you can no longer take part in the pilot.</p>
 
-      <p>If you have any questions, you can contact <a href="mailto:example@nhs.uk">example@nhs.uk</a>.
+      <p>If you have any questions, you can contact {{ data.supportEmail | urlize | safe }}</a>.
       </p>
     </div>
   </div>
