--- a/app/views/school/campaign/flu-preview.html
+++ b/app/views/school/campaign/flu-preview.html
@@ -56,7 +56,7 @@
         <h2 class="nhsuk-heading-m">Contact the local health team</h2>
 
         <p>
-          Speak to a member of the local health team by calling 01234 321456, or email example@nhs.uk.
+          Speak to a member of the local health team by calling 01234 321456, or email {{ data.supportEmail | urlize | safe }}.
         </p>
       </div>
     </div>
