Add phase banner

--- a/app/views/layouts/default.html
+++ b/app/views/layouts/default.html
@@ -22,6 +22,13 @@
     showNav: "false",
     showSearch: "false"
   }) }}
+  {{ govukPhaseBanner({
+    classes: "nhsuk-width-container",
+    tag: {
+      text: "Pilot"
+    },
+    text: "This is a pilot service."
+  }) | replace("govuk-tag", "nhsuk-tag") }}
 {% endblock %}
 
 {% block footer %}
