Update consent card heading

--- a/app/views/consent/check-answers.html
+++ b/app/views/consent/check-answers.html
@@ -16,7 +16,7 @@
   {% endset %}
 
   {{ card({
-    heading: "Consent",
+    heading: "Consent for the " + vaccine + " vaccination",
     headingClasses: "nhsuk-heading-m",
     descriptionHtml: summaryList({
       rows: decorateRows([
