--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,6 +17,12 @@
             <li><a href="/hpv/after-deadline">Give or refuse consent for an HPV vaccination - Deadline passed</a></li>
           </ul>
 
+          <h2 class="nhsuk-heading-m">Text messages</h2>
+          <ul class="nhsuk-list">
+            <li><a href="/texts/parents">Text messages sent to parents</a></li>
+            <li><a href="/texts/children">Text messages sent to children</a></li>
+          </ul>
+
           <h2 class="nhsuk-heading-m">Emails</h2>
           <ul class="nhsuk-list">
             <li><a href="/emails/flu/consent">Request consent for flu vaccination</a></li>
