--- a/app/views/consent/confirmation.html
+++ b/app/views/consent/confirmation.html
@@ -6,17 +6,17 @@
 
 {% set title %}
   {% if vaccine == "HPV" %}
-    {{ childName }} will get their HPV vaccination at school on {{ sessionDate | govukDate }}
+    {{ childName }} is due to get the HPV vaccination at school on {{ sessionDate | govukDate }}
   {% elseif vaccine == "DPT" %}
     {% if consentForBoth %}
-      {{ childName }} will get their 3-in-1 teenage booster and MenACWY vaccinations at school on {{ sessionDate | govukDate }}
+      {{ childName }} is due to get the 3-in-1 teenage booster and MenACWY vaccinations at school on {{ sessionDate | govukDate }}
     {% elseif 3in1consent %}
-      {{ childName }} will get their 3-in-1 teenage booster at school on {{ sessionDate | govukDate }}
+      {{ childName }} is due to get the 3-in-1 teenage booster at school on {{ sessionDate | govukDate }}
     {% elseif menACWYconsent %}
-      {{ childName }} will get their MenACWY vaccination at school on {{ sessionDate | govukDate }}
+      {{ childName }} is due to get the MenACWY vaccination at school on {{ sessionDate | govukDate }}
     {% endif %}
   {% else %}
-    {{ childName }} will get their nasal flu vaccination at school on {{ sessionDate | govukDate }}
+    {{ childName }} is due to get the nasal flu vaccination at school on {{ sessionDate | govukDate }}
   {% endif %}
 {% endset %}
 
@@ -29,5 +29,7 @@
     classes: "app-panel nhsuk-u-margin-bottom-6"
   }) }}
 
-  <p>We’ve sent confirmation to {{ email }}</p>
+  <p>We’ll send a confirmation once the vaccination has been given.</p>
+
+  <p>If the vaccination does not take place due to illness or absence, we’ll contact you about a catch-up session.</p>
 {% endblock %}
